# raylib_adventures

./: .clang-format  .gitignore  CMakeLists.txt  assets.cmake  conanfile.py  conanfile.txt  dependencies.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.hpp  font_type.hpp  main.cpp
src/game/: CMakeLists.txt
src/gfx/: CMakeLists.txt  font.cpp  font_manager.cpp  render_buffer.cpp  renderer.cpp  renderer_base.cpp  shader.cpp  window.cpp
src/gfx/include/gfx/: color.hpp  font.hpp  font_config.hpp  font_manager.hpp  render_buffer.hpp  renderer.hpp  renderer_base.hpp  shader.hpp  window.hpp
src/ui/: CMakeLists.txt  button.cpp  checkbox.cpp  column_layout.cpp  dropdown.cpp  event_dispatcher.cpp  event_listener.cpp  label.cpp  mouse.cpp  row_layout.cpp  scene_stack.cpp  textbox.cpp  ui_scene.cpp
src/ui/include/ui/: align.hpp  button.hpp  checkbox.hpp  column_layout.hpp  dropdown.hpp  event.hpp  event_dispatcher.hpp  event_listener.hpp  event_source.hpp  keycode.hpp  keystate.hpp  label.hpp  layout.hpp  mouse.hpp  mouse_button.hpp  panel.hpp  row_layout.hpp  scene.hpp  scene_stack.hpp  textbox.hpp  ui_scene.hpp  utils.hpp  widget.hpp  widget_factory.hpp
src/utils/: CMakeLists.txt  strings.cpp
src/utils/include/utils/: concepts.hpp  math.hpp  rect.hpp  strings.hpp  unique_value.hpp  vec2.hpp
